# fontfinder

./: Cargo.toml  LICENSE  Makefile  README.md  fontfinder.desktop  rustfmt.toml
assets/: fontfinder.desktop
gtk/: Cargo.toml  i18n.toml
gtk/i18n/pl/: fontfinder_gtk.ftl
gtk/src/: fc_cache.rs  localize.rs  main.rs  utils.rs
gtk/src/app/: main.rs  mod.rs
gtk/src/app/widgets/: fontlist.rs  header.rs  mod.rs
gtk/src/ui/: connected.rs  fontlist.rs  header.rs  main.rs  mod.rs
gtk/src/ui/widgets/: fontlist.rs  header.rs
i18n/de/: fontfinder.ftl  fontfinder_gtk.ftl
i18n/en/: fontfinder.ftl  fontfinder_gtk.ftl
i18n/es/: fontfinder.ftl  fontfinder_gtk.ftl
i18n/fr/: fontfinder.ftl  fontfinder_gtk.ftl
src/: dirs.rs  fc_cache.rs  fonts.rs  html.rs  lib.rs
src/lib/: dirs.rs  fonts.rs  html.rs  mod.rs
