[package]
authors = ["Michael Aaron Murphy <mmstickman@gmail.com>"]
name = "fontfinder"
description = "Font Finder Library"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/mmstick/fontfinder"
version = "1.5.0"
edition = "2018"

[workspace]
members = ["gtk"]

[dependencies]
horrorshow = "0.8"
itertools = "0.9"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
ureq = { version = "1.4", features = ["json"]}
anyhow = "1.0"
async-process = "1.0.0"
