[package]
authors = ["Michael Aaron Murphy <mmstickman@gmail.com>"]
name = "fontfinder"
description = "Font Finder Library"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/mmstick/fontfinder"
version = "2.1.0"

[workspace]
members = ["gtk"]

[dependencies]
anyhow = "1.0"
async-process = "1.0"
horrorshow = "0.8"
i18n-embed = { version = "0.12", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.5"
itertools = "0.10"
lazy_static = "1.4"
once_cell = "1.7"
rust-embed = "5.9"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
ureq = { version = "2.1", features = ["json"]}
dirs = "4.0.0"