[package]
authors = ["Michael Aaron Murphy <mmstickman@gmail.com>"]
name = "fontfinder"
description = "Font Finder Library"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/mmstick/fontfinder"
version = "2.1.0"
edition = "2021"

[workspace]
members = ["gtk"]

[dependencies]
anyhow = "1.0"
async-process = "1.7"
horrorshow = "0.8"
i18n-embed = { version = "0.13.8", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.6.6"
itertools = "0.10"
lazy_static = "1.4"
once_cell = "1.17"
rust-embed = "6.6.1"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
ureq = { version = "2.6", features = ["json"]}
dirs = "5.0.0"
