[package]
authors = ["Michael Aaron Murphy <mmstickman@gmail.com>"]
name = "fontfinder-gtk"
description = "GTK3 Font Finding GUI Application"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/mmstick/fontfinder"
version = "2.0.0"
edition = "2018"

[dependencies]
cascade = "1.0"
fontfinder = { path = ".." }
glib = "0.10"
gio = "0.9"
gtk = { version = "0.9", features = ["v3_22"] }
webkit2gtk = { version = "0.11", features = ["v2_16"] }
flume = "0.10"
futures = "0.3"
