[package]
authors = ["Michael Aaron Murphy <mmstickman@gmail.com>"]
name = "fontfinder-gtk"
description = "GTK3 Font Finding GUI Application"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/mmstick/fontfinder"
version = "2.0.0"
edition = "2018"

[dependencies]
async-channel = "1.6"
cascade = "1.0"
closure = "0.3"
fontfinder = { path = ".." }
futures = "0.3"
gio = "0.9"
glib = "0.10"
gtk = { version = "0.9", features = ["v3_22"] }
i18n-embed = { version = "0.12", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.5"
once_cell = "1.7"
rust-embed = "5.9"
webkit2gtk = { version = "0.11", features = ["v2_16"] }
