[package]
authors = ["Michael Aaron Murphy <mmstickman@gmail.com>"]
name = "fontfinder-gtk"
description = "GTK3 Font Finding GUI Application"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/mmstick/fontfinder"
version = "2.1.0"
edition = "2018"

[dependencies]
async-channel = "1.8"
cascade = "1.0"
closure = "0.3"
fontfinder = { path = ".." }
futures = "0.3"
gio = "0.16.7"
glib = "0.16.7"
gtk = { version = "0.16.2" }
i18n-embed = { version = "0.13.8", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.6.6"
once_cell = "1.17"
rust-embed = "6.6.1"
webkit2gtk = { version = "1.0.0", features = ["v2_16"] }
